# NanoMUSiC

./: .clang-format  .gitignore  .gitmodules  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  ECPlot_Command.txt  LICENSE.md  Makefile  README.md  bootstrap_music.sh  build.ninja  cmake_install.cmake  compile_commands.json  compile_flags.txt  debug.env  foo.cpp  gdb.txt  music_setenv.sh  pyproject.toml  rootlogon.C  setenv.sh  setenv_music.sh  setup_music.sh
NanoMUSiC/: CMakeLists.txt  CONTRIBUTING.md  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
NanoMUSiC/Classification/: CMakeLists.txt
NanoMUSiC/Classification/assets/: description_template.txt
NanoMUSiC/Classification/include/: BTagEffMap.hpp  Classification.hpp  Distribution.hpp  DistributionLinkDef.h  EventClass.hpp  EventClassFactory.hpp  EventClassLinkDef.h  GammaPlusJet.hpp  GeneratorFilters.hpp  MUSiCHistogram.hpp  NanoAODGenInfo.hpp  SerializationUtils.hpp  TTBarTo1Lep2Bjet2JetMET.hpp  TopPtReweighting.hpp  ValidationContainer.hpp  WToLepNuX.hpp  ZGamma.hpp  ZToLepLepX.hpp  roothelpers.hpp
NanoMUSiC/Classification/plotter/: CMS_lumi.h  tdrstyle.C
NanoMUSiC/Classification/python/: analysis_builder.py  btag_efficiency.py  classification.py  condor_manager.py  local_condor.py  parallel_resume.py  precomputation.py  preprocessing.py  skimmer.py
NanoMUSiC/CondorScheduler/: analysis.py  computation.py  condor_scheduler.py  test_analysis.py  test_computation.py
NanoMUSiC/MUSiC/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  CorrectionSets.hh  MConfig.cpp  MUSiCEvent.hh  NanoAODReader.cpp  NanoMUSiC.cc  NanoMUSiC.cpp  NanoMUSiC.hh  NanoMUSiC_BKP.cpp  NanoMUSiC_BKP_v2.cpp  NanoObjects.hh  OLD_music.OLD  RunLumiFilter.hh  Tools.cpp  cmake_install.cmake  dumm_nano_objects.dummy  event_class_hash.hh  music.cc  music.cpp  music.gcda  music.hh  nano2pxl_utils.hh  nanoaod_content_printer.cc  nanoaod_content_printer.cpp  stAZOiM1  test_MUSiCEvent.cpp
NanoMUSiC/MUSiC-BTagEff/: TEff.cpp  TEff.py  bTagEff.cpp  btageff.py
NanoMUSiC/MUSiC-CRAB/: TEff.cpp  TEff.py  analysis_config.toml  analysis_config_JetTriggerWithoutMatching.toml  analysis_config_builder.py  config_builder.py  crab_job_list.toml  crab_monitor.py  crab_monitor_web.py  crab_music.py  crab_music_btageff_pset.py  crab_music_pset.py  crab_setup.sh  crab_submit.py  create_output_filelist.py  das_extra_samples.txt  das_sample_list.txt  das_samples_list_2023_07_20.txt  dummy_frameworkjob_report.xml  dummy_list.toml  output_file_list.toml  parse_sample_list_nanoaod.py  raw_config.toml  run_btageff.sh  run_nano_music.sh  sample_list.py  xSections_list.toml  xSections_list_2018_light_skimmer.toml  xSections_list_ForFixing.toml  xSections_list_HtTriggerSkim_31_05.toml  xSections_list_PtHtSkim_01_06.toml  xSections_list_PtTriggerSkim_31_05.toml  xSections_list_Reskim_26_06.toml  xSections_list_Reskim_26_06_resubmit.toml  xSections_list_Reskim_26_06_resubmit_2.toml  xSections_list_allSignal.toml
NanoMUSiC/MUSiC-Classification/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake
NanoMUSiC/MUSiC-ClassificationUtils/: CMakeLists.txt
NanoMUSiC/MUSiC-Configs/: README.md  set_env.sh
NanoMUSiC/MUSiC-HeavyValidation/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake
NanoMUSiC/MUSiC-LightSkimmer/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake
NanoMUSiC/MUSiC-RoIScanner/: .gitignore  CMakeLists.txt  Makefile  readme.md  set_env.sh
NanoMUSiC/MUSiC-TauEff/: TEff_tau.cpp
NanoMUSiC/MUSiC-Utils/: .gitignore  CMakeLists.txt  Makefile  README.md  set_env.sh
NanoMUSiC/MUSiC-Validation/: CMakeLists.txt  CMakeLists_beforedynamicbinning.txt
NanoMUSiC/NanoEC/: NanoEC.cpp  README.md  build.sh
NanoMUSiC/NanoEventClass/: CMakeLists.txt  NanoEventClass.py  README.md
NanoMUSiC/PlotLib/: .gitignore  DukePlotALot_tester.py  DukePlotALot_tester_realPlot.py  README  plotLib_doxy_cfg  py_test.py  set_env.sh  setup.sh  testplot.py
NanoMUSiC/PxlAnalyzer/: .gitignore  CMakeLists.txt  Makefile  pxl_analyzer_doxy_cfg  set_env.sh
NanoMUSiC/RoIScanner/: BuildFile.xml  CMakeLists.txt
NanoMUSiC/TEventClass/: CMakeLists.txt  CTestTestfile.cmake  README.md  TEventClassDict.cxx  cmake_install.cmake  libTEventClass.rootmap  module.modulemap
NanoMUSiC/Utils/: CMakeLists.txt
NanoMUSiC/tools/: .gitignore  README.md  doc_definitions.py  initTools  set_env.sh  tools3a_doxy_cfg
configs/: CMakeLists.txt  Data_2017.toml  MC_2017.toml  jets_2017.toml
configs/golden_jsons/: README.md
configs/include/: ConfigParams.hpp  ConfigParamsLinkDef.h
configs/python/: classification_test.py
configs/run_configs/: Data.toml  Data_2017.toml  Data_Run2016.toml  Data_Run2016APV.toml  Data_Run2017.toml  Data_Run2018.toml  MC.toml  MC_2017.toml  MC_Run2016.toml  MC_Run2016APV.toml  MC_Run2017.toml  MC_Run2017_JHUGen.toml  MC_Run2017_POWHEG.toml  MC_Run2018.toml  MC_Run2018_DYToEE_M-120To200_powheg.toml  MC_Run2018_DY_pT_filter_400_650.toml  MC_Run2018_Pythia_only.toml  MC_Run2018_QCD.toml  MC_Run2018_WJets.toml
configs/src/: ConfigParams.cpp
configs/task_configs/: CRAB_template.toml  Data_Run2016.toml  Data_Run2016APV.toml  Data_Run2017.toml  Data_Run2018.toml  Data_Run2018C.toml  Data_Run2018C_EGamma.toml  Data_Run2018_JetHT.toml  MC_Run2016.toml  MC_Run2016APV.toml  MC_Run2016APV_ZToMuMu_M-1400To2300_TuneCP5_13TeV-powheg-pythia8.toml  MC_Run2017.toml  MC_Run2017_JHUGen.toml  MC_Run2017_POWHEG.toml  MC_Run2017_ZGTo2NuG_TuneCP5_13TeV-amcatnloFXFX-pythia8.toml  MC_Run2018.toml  MC_Run2018_DYToEE_M-120To200_powheg.toml  MC_Run2018_DY_pT_filter_400_650.toml  MC_Run2018_EWKZ2Jets.toml  MC_Run2018_Pythia_only.toml  MC_Run2018_QCD.toml  MC_Run2018_QCD_HT2000toinf.toml  MC_Run2018_TTToSemiLeptonic_2018.toml  MC_Run2018_WJets.toml
configs/xsections_and_lumi/: das_sample_list.txt  das_sample_list_2018_only.txt  das_sample_list_Jets_2018_only.txt  das_sample_list_all_mc_data_2023_06_26.txt  das_sample_list_all_mc_data_2023_07_05.txt  luminosities.toml  samples.toml  xSections.toml  x_sections.toml  x_sections_LEGACY.toml
(+4883 files in other folders)
