# enable tests
enable_testing()

add_subdirectory(MUSiC)
add_subdirectory(MUSiC-LightSkimmer)
add_subdirectory(MUSiC-ClassificationUtils)

add_subdirectory(MUSiC-Classification)

add_subdirectory(TEventClass)

# add_subdirectory(PxlAnalyzer)

# add_subdirectory(MUSiC-Utils)
# add_subdirectory(MUSiC-RoIScanner)
add_subdirectory(NanoEventClass)