# enable tests
enable_testing()

# add_subdirectory(MUSiC)
# add_subdirectory(MUSiC-LightSkimmer)
add_subdirectory(ClassificationUtils)

add_subdirectory(Classification)

# add_subdirectory(TEventClass)

# add_subdirectory(PxlAnalyzer)

# add_subdirectory(MUSiC-Utils)
# add_subdirectory(MUSiC-RoIScanner)
add_subdirectory(NanoEventClass)
add_subdirectory(Utils)
